Start på kontainere

--- a/styleguide/index.html
+++ b/styleguide/index.html
@@ -83,8 +83,15 @@
         <h1 class="section-title">
           Kontainere
         </h1>
+        <div class="boks">
+          <h1 class="title-example">
+            width: 100%, height: 100%, border-radius: 20px, color: #fff,
+          </h1>
+          <div class="description">
+            width: 100%, height: auto, border-radius: 20px,
+          </div>
+        </div>
       </section>
-      Ex blandit detracto legendos sit, et vix ludus vitae. Case fierent ut vis, eros docendi mnesarchum nec cu. Utroque dissentiet eos ne, verear salutandi nam in. Ei pri laudem alterum, sit in ocurreret dissentiunt, eirmod omnesque ne sea.
     </section>
       </div>
   </div>
