--- a/styleguide/index.html
+++ b/styleguide/index.html
@@ -34,7 +34,7 @@
           <div class="example">20px/18px</div>
         </div>
         <div class="typo-container">
-          <p class="description">Ex blandit detracto legendos sit, et vix ludus vitae. Case fierent ut vis, eros docendi mnesarchum nec cu. Utroque dissentiet eos ne, verear salutandi nam in.</p>
+          <p class="typo-description">Ex blandit detracto legendos sit, et vix ludus vitae. Case fierent ut vis, eros docendi mnesarchum nec cu. Utroque dissentiet eos ne, verear salutandi nam in.</p>
           <div class="example">16px/12px</div>
         </div>
       </section>
@@ -65,7 +65,7 @@
         <h1 class="section-title">
           Logo
         </h1>
-        <p class="description">
+        <p class="logo-wrap">
           <img src="logo-default.png" class="logo-example">
           Standard logo<br />
           175x58px
