--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </header>
   <h1 class="questionTitle">Nyeste indlæg</h1>
   <div id="container">
-    <div class="boks">
+    <div class="forside-boks">
       <a href="forum-traad.html">
       <div class="boks-person">
         <img src="assets/images/dame1.png" alt="Dame 1" class="tilpas">
