--- a/styleguide/index.html
+++ b/styleguide/index.html
@@ -37,6 +37,15 @@
           <p class="typo-description">Ex blandit detracto legendos sit, et vix ludus vitae. Case fierent ut vis, eros docendi mnesarchum nec cu. Utroque dissentiet eos ne, verear salutandi nam in.</p>
           <div class="example">16px/12px</div>
         </div>
+        <div class="typo-container">
+          <p class="typo-description1">Ex blandit detracto legendos sit, et vix ludus vitae. Case fierent ut vis, eros docendi mnesarchum nec cu. Utroque dissentiet eos ne, verear salutandi nam in.</p>
+        </div>
+        <div class="typo-container">
+          <p class="typo-description2">Ex blandit detracto legendos sit, et vix ludus vitae. Case fierent ut vis, eros docendi mnesarchum nec cu. Utroque dissentiet eos ne, verear salutandi nam in.</p>
+        </div>
+        <div class="typo-container">
+          <p class="typo-description3">Ex blandit detracto legendos sit, et vix ludus vitae. Case fierent ut vis, eros docendi mnesarchum nec cu. Utroque dissentiet eos ne, verear salutandi nam in.</p>
+        </div>
       </section>
       <section id="farver">
         <h1 class="section-title">
