--- a/styleguide/index.html
+++ b/styleguide/index.html
@@ -40,13 +40,20 @@
           <div class="example">16px/12px</div>
         </div>
         <div class="typo-container">
+          <p class="typo-description4">Ex blandit detracto legendos sit, et vix ludus vitae. Case fierent ut vis, eros docendi mnesarchum nec cu. Utroque dissentiet eos ne, verear salutandi nam in.</p>
+          <div class="example">Lato Regular</div>
+        </div>
+        <div class="typo-container">
           <p class="typo-description1">Ex blandit detracto legendos sit, et vix ludus vitae. Case fierent ut vis, eros docendi mnesarchum nec cu. Utroque dissentiet eos ne, verear salutandi nam in.</p>
+          <div class="example">Lato Light</div>
         </div>
         <div class="typo-container">
           <p class="typo-description2">Ex blandit detracto legendos sit, et vix ludus vitae. Case fierent ut vis, eros docendi mnesarchum nec cu. Utroque dissentiet eos ne, verear salutandi nam in.</p>
+          <div class="example">Cabin Sketch Regular</div>
         </div>
         <div class="typo-container">
           <p class="typo-description3">Ex blandit detracto legendos sit, et vix ludus vitae. Case fierent ut vis, eros docendi mnesarchum nec cu. Utroque dissentiet eos ne, verear salutandi nam in.</p>
+          <div class="example">Verdana</div>
         </div>
       </section>
       <section id="farver">
